--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1"
   },
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  },
+  "devDependencies": {},
   "keywords": [
     "gatsby"
   ],
